@@ -6,3 +6,15 @@
             -if man drop is valid, then ai can drop
     bugs:
         after invalid drop, button wont bounce up
+
+@willyc20 2016/3/17
+    add:
+        void view::create_top_info
+        void view::change_top_info
+        void view::message_alert
+        void view::ending_handler
+    change:
+        void view::change_board
+            -add piece color
+        
+            
